Updated global letter spacing, fixed wording

--- a/packages/payment-gateway/src/assets/stylesheets/components/header.scss
+++ b/packages/payment-gateway/src/assets/stylesheets/components/header.scss
@@ -18,6 +18,7 @@
     .heading-label {
         color: #0E0639;
         font-weight: 600;
+        text-align: center;
 
     }
 
