--- a/packages/payment-gateway/src/assets/stylesheets/config/global.scss
+++ b/packages/payment-gateway/src/assets/stylesheets/config/global.scss
@@ -25,7 +25,7 @@ body {
 h1 {
   font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
   font-weight: 700;
-  letter-spacing: 0.04em;
+  letter-spacing: 0.01em;
   line-height: 1.2em;
   font-size: 3em;
   margin: 0;
